--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
@@ -26,11 +27,20 @@
     "stripe": "^9.14.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "^18.0.4",
     "@types/react": "^18.0.15",
+    "babel-jest": "^29.4.2",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.4.2",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^29.4.2",
     "slice-machine-ui": "^0.4.1",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.7.4"
   }
 }
